[YLI-189]: Updated branch locations #2.

--- a/openy_lily/templates/field/address-plain.html.twig
+++ b/openy_lily/templates/field/address-plain.html.twig
@@ -43,9 +43,8 @@
   {% if address_line1 %}
     {{ address_line1 }} <br>
   {% endif %}
-  {% if address_line2 %}222
+  {% if address_line2 %}
     {{ address_line2 }} <br>
   {% endif %}
-  {{ locality }}, {{ administrative_area.code }} {{ postal_code }} <br>
-  {{ country.name }}
+  {{ locality }}, {{ administrative_area.code }} {{ postal_code }}
 </p>
