--- a/openy_lily/sass/misc/_blog.scss
+++ b/openy_lily/sass/misc/_blog.scss
@@ -12,7 +12,7 @@
           position: absolute;
           left: 0;
           padding: 10px 20px;
-          background-color: rgba(156,31,123,0.75);
+          background-color: $main-purple;
           color: white;
           font-weight: bold;
         }
