--- a/themes/openy_themes/openy_rose/templates/node/node--camp--class_location.html.twig
+++ b/themes/openy_themes/openy_rose/templates/node/node--camp--class_location.html.twig
@@ -94,7 +94,7 @@
 
     <h2{{ title_attributes }}>
       <a href="{{ title_url }}" rel="bookmark">{{ label }}</a>
-    </h2><a href="#" class="edit-class-popup hidden">Change</a>
+    </h2><a href="#" class="edit-class-popup hidden">{{ "Edit"|t }}</a>
   {% endif %}
   {{ title_suffix }}
 
