--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -1940,7 +1940,31 @@ body .ajax-progress-throbber .throbber {
   max-height: 500px;
 }
 
-.pink-button, #banner .banner-caption a {
+.pink-button, #edit-registration,
+.form-submit, #banner .banner-caption a {
+  margin: 0;
+  border: 0;
+  color: white;
+  display: inline-block;
+  background-color: #9c1f7b;
+  background-image: -webkit-linear-gradient(#b92f9e, transparent);
+  background-image: -moz-linear-gradient(#b92f9e, transparent);
+  background-image: -ms-linear-gradient(#b92f9e, transparent);
+  background-image: linear-gradient(#b92f9e, rgba(0, 0, 0, 0));
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Cachet',Helvetica,Arial,sans-serif;
+  border-radius: 3px;
+  line-height: 1.33;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+.blue-button {
   margin: 0;
   border: 0;
   color: white;
@@ -1972,7 +1996,8 @@ body .ajax-progress-throbber .throbber {
 }
 
 .form-wrapper {
-  margin-bottom: 15px;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .field--type-list-integer legend {
@@ -1999,6 +2024,128 @@ body .ajax-progress-throbber .throbber {
 
 .form-tel.error {
   border-color: #a92b31;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #636466;
+  vertical-align: middle;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 #000;
+  -o-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 #000;
+  -ms-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 #000;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 #000;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 #000;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -moz-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -ms-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+#edit-registration,
+.form-submit {
+  padding: 6px 12px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+}
+
+#edit-reset-password {
+  background: none;
+  border: none;
+  box-shadow: none;
+  text-transform: inherit;
+  font-weight: normal;
+  color: #0089d0;
+  padding: 0;
+}
+#edit-reset-password:hover {
+  text-decoration: underline;
+}
+
+#edit-login {
+  margin-right: 2px;
+}
+
+label {
+  font-family: 'Cachet';
+}
+
+.fieldset-legend {
+  font-family: 'Cachet';
+  color: #92288d;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.openy-ccc-login-form,
+.openy-ccc-registration-form {
+  font-family: 'Cachet';
+}
+
+#edit-intro-text {
+  font-size: 16px;
+  line-height: 1.6em;
+  color: #636466;
+  font-family: 'Cachet';
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: .7em;
+}
+
+#edit-branch:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+#edit-branch .form-item {
+  width: 50%;
+  float: left;
+}
+@media (min-width: 0) and (max-width: 30em) {
+  #edit-branch .form-item {
+    width: 100%;
+    float: none;
+  }
+}
+
+#edit-login-actions,
+#edit-registration-actions {
+  float: left;
+  width: 50%;
+}
+#edit-login-actions a,
+#edit-registration-actions a {
+  float: left;
+  margin-right: 6px;
+}
+@media (min-width: 0) and (max-width: 30em) {
+  #edit-login-actions,
+  #edit-registration-actions {
+    width: 100%;
+    float: none;
+  }
+}
+#edit-login-actions #edit-registration-text,
+#edit-registration-actions #edit-registration-text {
+  margin-top: 5px;
+  float: left;
+}
+
+legend {
+  border-bottom: none;
+  margin-bottom: 0;
 }
 
 #mindbody-pt-form-wrapper {
