--- a/openy_lily/sass/misc/_forms.scss
+++ b/openy_lily/sass/misc/_forms.scss
@@ -7,7 +7,8 @@
 }
 
 .form-wrapper {
-  margin-bottom: 15px;
+  margin-bottom: 25px;
+  margin-top: 25px;
 }
 
 .field--type-list-integer {
@@ -40,4 +41,114 @@
 
 .form-tel.error {
   border-color: $red-dark;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #636466;
+  vertical-align: middle;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075) 0 0 #000;
+  -o-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) 0 0 #000;
+  -ms-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) 0 0 #000;
+  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) 0 0 #000;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075) 0 0 #000;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -moz-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -ms-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+#edit-registration,
+.form-submit {
+  @extend .pink-button;
+  padding: 6px 12px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+}
+#edit-reset-password {
+  background: none;
+  border: none;
+  box-shadow: none;
+  text-transform: inherit;
+  font-weight: normal;
+  color: $blue-medium;
+  padding: 0;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+#edit-login {
+  margin-right: 2px;
+}
+
+label {
+  font-family: 'Cachet';
+}
+
+.fieldset-legend {
+  font-family: 'Cachet';
+  color: $purple;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.openy-ccc-login-form,
+.openy-ccc-registration-form {
+  font-family: 'Cachet';
+}
+
+#edit-intro-text {
+  font-size: 16px;
+  line-height: 1.6em;
+  color: #636466;
+  font-family: 'Cachet';
+  font-weight: 400;
+  font-style: normal;
+  margin-bottom: .7em;
+}
+
+#edit-branch {
+  @include clearfix;
+  .form-item {
+    width: 50%;
+    float: left;
+    @include breakpoint(0 $mobile-landscape) {
+      width: 100%;
+      float: none;
+    }
+  }
+}
+#edit-login-actions,
+#edit-registration-actions {
+  float: left;
+  width: 50%;
+  a {
+    float: left;
+    margin-right: 6px;
+  }
+  @include breakpoint(0 $mobile-landscape) {
+    width: 100%;
+    float: none;
+  }
+  #edit-registration-text {
+    margin-top: 5px;
+    float: left;
+  }
+}
+legend {
+  border-bottom: none;
+  margin-bottom:0;
 }
