--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -1963,28 +1963,13 @@ body .ajax-progress-throbber .throbber {
   cursor: pointer;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
-
-.blue-button {
-  margin: 0;
-  border: 0;
-  color: white;
-  display: inline-block;
+.pink-button:hover, #edit-registration:hover,
+.form-submit:hover, #banner .banner-caption a:hover {
   background-color: #9c1f7b;
   background-image: -webkit-linear-gradient(#b92f9e, transparent);
   background-image: -moz-linear-gradient(#b92f9e, transparent);
   background-image: -ms-linear-gradient(#b92f9e, transparent);
   background-image: linear-gradient(#b92f9e, rgba(0, 0, 0, 0));
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
-  text-transform: uppercase;
-  font-weight: bold;
-  font-family: 'Cachet',Helvetica,Arial,sans-serif;
-  border-radius: 3px;
-  line-height: 1.33;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .form-item {
