--- a/openy_lily/templates/page/html.html.twig
+++ b/openy_lily/templates/page/html.html.twig
@@ -37,7 +37,7 @@
 <html{{ html_attributes }}>
   <head>
     <head-placeholder token="{{ placeholder_token }}">
-    <title>{{ page_title }}</title>
+    <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token }}">
     <js-placeholder token="{{ placeholder_token }}">
   </head>
