--- a/openy_lily/sass/misc/_forms.scss
+++ b/openy_lily/sass/misc/_forms.scss
@@ -83,12 +83,12 @@
   text-transform: capitalize;
 }
 [data-drupal-selector="edit-reset-password"] {
-  background: none;
+  background: none !important;
   border: none;
   box-shadow: none;
   text-transform: inherit;
   font-weight: normal;
-  color: $blue-medium;
+  color: $blue-medium !important;
   padding: 0;
   margin-top: 5px;
   margin-left: 6px;
