--- a/themes/openy_themes/openy_rose/scss/modules/_class.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_class.scss
@@ -171,3 +171,11 @@
     padding: 5px;
   }
 }
+
+.page-node-type-class {
+  #block-openy-rose-content {
+    > .container {
+      padding: 20px 15px;
+    }
+  }
+}
