[OYPD-450] Add edit link for class location when empty.

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_class_location/templates/openy-class-location.html.twig
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_class_location/templates/openy-class-location.html.twig
@@ -1,5 +1,8 @@
 {% if class_location is not empty %}
   {{ class_location }}
 {% else %}
-  <div class="empty-text">{{ 'Class schedule for all locations'|t }}</div>
+  <div class="empty-text">
+    <span>{{ 'Class schedule for all locations'|t }}</span>
+    <a href="#" class="edit-class-popup hidden">{{ "Edit"|t }}</a>
+  </div>
 {% endif %}
