--- a/openy_lily/templates/page/page.html.twig
+++ b/openy_lily/templates/page/page.html.twig
@@ -130,7 +130,7 @@
 
     {% block breadcrumb %}
       <div class="row breadcrumb-container hidden-xs">
-        <div class="container">
+        <div class="container-fluid">
           {{ page.breadcrumb }}
         </div>
       </div>
