--- a/openy_lily/sass/global/_colors.scss
+++ b/openy_lily/sass/global/_colors.scss
@@ -60,6 +60,7 @@ $grey22: #f4f4f4;
 $grey23: #d2d2d2;
 $grey24: #dbdbdb;
 $grey25: #333333;
+$grey26: #3a3a3a;
 
 $black2: #1d1d1b;
 $black3: #434343;
