--- a/openy_lily/sass/style.scss
+++ b/openy_lily/sass/style.scss
@@ -10,6 +10,7 @@
 @import 'misc/toolbar';
 @import 'misc/header';
 @import 'misc/footer';
+@import 'misc/breadcrumb';
 @import 'misc/styleguide';
 @import 'misc/frontpage';
 @import 'misc/location';
