--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -11,7 +11,6 @@ body {
     max-width: 100%;
   }
 }
-
 #side-area {
   height: 100%;
   width: 0;
@@ -83,6 +82,7 @@ body {
 }
 
 .viewport {
+  position: static;
   &:after {
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
@@ -97,6 +97,7 @@ body {
   #main {
     transition: margin-left .2s;
     position: relative;
+    z-index:999;
     .path-frontpage & {
       background: #e5e5e5;
     }
@@ -342,7 +343,6 @@ header {
           }
         }
       }
-
     }
     #block-anonymoususersmenu {
       .nav {
