--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -63,11 +63,11 @@ h6, .h6 {
   font-size: 12px;
 }
 
-.container-fluid {
+.container-fluid, #block-openy-lily-content .one-column-clean.landing-content {
   padding: 0 30px;
 }
 @media (min-width: 75em) {
-  .container-fluid {
+  .container-fluid, #block-openy-lily-content .one-column-clean.landing-content {
     padding: 0 100px;
   }
 }
@@ -250,6 +250,9 @@ a:hover, a:active, a:focus {
   transition: margin-left .2s;
   position: relative;
 }
+.path-frontpage .viewport #main {
+  background: #e5e5e5;
+}
 .viewport.expanded-mobile:after {
   opacity: 1;
 }
@@ -281,7 +284,7 @@ header:after {
   clear: both;
 }
 @media (min-width: 1200px) {
-  header .container-fluid {
+  header .container-fluid, header #block-openy-lily-content .one-column-clean.landing-content, #block-openy-lily-content header .one-column-clean.landing-content {
     padding-right: 100px;
     padding-left: 100px;
   }
@@ -1027,12 +1030,16 @@ body.path-search #block-mainpagecontent li {
   font-weight: bold;
 }
 
+.node--type-blog.node--view-mode-teaser {
+  max-width: 100%;
+}
 .node--type-blog.node--view-mode-teaser a .inner-wrapper {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   margin: 15px 0;
   overflow: visible;
   height: auto;
   border: none !important;
+  background-color: rgba(255, 255, 255, 0.61);
 }
 .node--type-blog.node--view-mode-teaser a .inner-wrapper .blog-up {
   text-align: center;
@@ -1054,17 +1061,18 @@ body.path-search #block-mainpagecontent li {
   border-top: 1px solid #ebebeb;
 }
 .node--type-blog.node--view-mode-teaser a .inner-wrapper .blog-up .default-img img {
-  width: 50%;
   margin: 36px 0;
+  height: 75%;
+  width: auto;
 }
 .node--type-blog.node--view-mode-teaser a .inner-wrapper .blog-heading {
   padding: 12px;
   position: static;
-  -webkit-transition: all 0.35 ease;
-  -moz-transition: all 0.35 ease;
-  -ms-transition: all 0.35 ease;
-  -o-transition: all 0.35 ease;
-  transition: all 0.35 ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   background-color: #F5F5F5 !important;
 }
 .node--type-blog.node--view-mode-teaser a .inner-wrapper .blog-heading h2 {
@@ -1072,11 +1080,11 @@ body.path-search #block-mainpagecontent li {
   font-weight: bold;
   margin-top: 8px;
   font-size: 30px;
-  -webkit-transition: all 0.35 ease;
-  -moz-transition: all 0.35 ease;
-  -ms-transition: all 0.35 ease;
-  -o-transition: all 0.35 ease;
-  transition: all 0.35 ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .node--type-blog.node--view-mode-teaser a .inner-wrapper .blog-heading h2:after {
   margin: 10px 10px 0;
@@ -1087,11 +1095,11 @@ body.path-search #block-mainpagecontent li {
   text-align: center;
   font-size: 24px;
   font: normal normal normal 14px/1 FontAwesome;
-  -webkit-transition: all 0.3 ease;
-  -moz-transition: all 0.3 ease;
-  -ms-transition: all 0.3 ease;
-  -o-transition: all 0.3 ease;
-  transition: all 0.3 ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
   width: 21px;
   height: 21px;
   border-radius: 50%;
@@ -4449,7 +4457,7 @@ a.sports-icon.floor-hockey {
 
 #banner {
   position: relative;
-  height: 455px;
+  min-height: 455px;
 }
 @media (min-width: 0) and (max-width: 62em) {
   #banner {
@@ -4464,7 +4472,7 @@ a.sports-icon.floor-hockey {
   display: block;
   visibility: visible;
   width: 66%;
-  height: 455px;
+  height: 100%;
   background: #434343;
   content: '';
   -webkit-transform: skew(-20deg);
@@ -4482,13 +4490,16 @@ a.sports-icon.floor-hockey {
     display: none;
   }
 }
+#banner .image {
+  position: inherit;
+}
 #banner .banner-img {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 0;
   width: 100%;
-  height: 455px;
+  height: 100%;
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
@@ -4554,7 +4565,7 @@ a.sports-icon.floor-hockey {
   #small-text-banner {
     height: auto;
   }
-  #small-text-banner .container-fluid {
+  #small-text-banner .container-fluid, #small-text-banner #block-openy-lily-content .one-column-clean.landing-content, #block-openy-lily-content #small-text-banner .one-column-clean.landing-content {
     padding: 0 15px;
   }
 }
