--- a/openy_lily/sass/misc/_blog.scss
+++ b/openy_lily/sass/misc/_blog.scss
@@ -1,4 +1,5 @@
 .node--type-blog.node--view-mode-teaser {
+  max-width: 100%;
   a {
     .inner-wrapper {
       box-shadow: 0 2px 2px rgba(0,0,0,0.2);
@@ -6,6 +7,7 @@
       overflow: visible;
       height: auto;
       border: none !important;
+      background-color: rgba(255,255,255,0.61);
       .blog-up {
         text-align: center;
         .category {
@@ -24,22 +26,23 @@
           border-bottom: 1px solid #ebebeb;
           border-top: 1px solid #ebebeb;
           img {
-            width: 50%;
             margin: 36px 0;
+            height: 75%;
+            width: auto;
           }
         }
       }
       .blog-heading {
         padding: 12px;
         position: static;
-        @include transition(all 0.35 ease);
+        @include transition(all 0.5s ease);
         background-color: #F5F5F5 !important;
         h2 {
           color: #635f5f;
           font-weight: bold;
           margin-top: 8px;
           font-size: 30px;
-          @include transition(all 0.35 ease);
+          @include transition(all 0.5s ease);
           &:after {
             margin:10px 10px 0;
             display: inline-block;
@@ -49,7 +52,7 @@
             text-align: center;
             font-size: 24px;
             font: normal normal normal 14px/1 FontAwesome;
-            @include transition(all 0.3 ease);
+            @include transition(all 0.5s ease);
             width: 21px;
             height: 21px;
             border-radius: 50%;
