--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -377,10 +377,10 @@ header .top-navs #block-openy-lily-main-menu {
     display: none !important;
   }
 }
-header .top-navs #block-openy-lily-main-menu ul {
+header .top-navs #block-openy-lily-main-menu .nav {
   float: none;
 }
-header .top-navs #block-openy-lily-main-menu ul li a {
+header .top-navs #block-openy-lily-main-menu .nav li a {
   font-size: 17px;
   color: white;
   padding: 21px 25px;
@@ -390,31 +390,31 @@ header .top-navs #block-openy-lily-main-menu ul li a {
   -o-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
-header .top-navs #block-openy-lily-main-menu ul li a.expanded-menu + .dropdown-menu {
+header .top-navs #block-openy-lily-main-menu .nav li a.expanded-menu + .dropdown-menu {
   display: block;
 }
 @media screen and (max-width: 1199px) {
-  header .top-navs #block-openy-lily-main-menu ul li a {
+  header .top-navs #block-openy-lily-main-menu .nav li a {
     font-size: 15px;
   }
 }
-header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 {
+header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2 {
   float: none;
   display: table-cell;
   width: 1%;
-  min-width: 10%;
+  min-width: 4%;
 }
-header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a {
+header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2 > a {
   padding: 21px 0px;
 }
-header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a i {
+header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2 > a i {
   font-size: 12px;
   margin-left: 5px;
 }
-header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a.expanded-menu, header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a:hover {
+header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2 > a.expanded-menu, header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2 > a:hover {
   background: rgba(255, 255, 255, 0.18);
 }
-header .top-navs #block-openy-lily-main-menu ul li.nav-level-2.menu-icon-1 a:after {
+header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2.menu-icon-1 a:after {
   font-family: 'Glyphicons Halflings';
   font-style: normal;
   font-weight: 400;
@@ -428,12 +428,12 @@ header .top-navs #block-openy-lily-main-menu ul li.nav-level-2.menu-icon-1 a:aft
   left: 0;
 }
 @media (min-width: 75em) {
-  header .top-navs #block-openy-lily-main-menu ul li.nav-level-2.menu-icon-1 a:after {
+  header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2.menu-icon-1 a:after {
     display: none;
   }
 }
 @media screen and (max-width: 1200px) {
-  header .top-navs #block-openy-lily-main-menu ul li.nav-level-2.menu-icon-1 {
+  header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2.menu-icon-1 {
     min-width: 3%;
     display: inline-block;
     float: left;
@@ -443,17 +443,17 @@ header .top-navs #block-openy-lily-main-menu ul li.nav-level-2.menu-icon-1 a:aft
     height: 62px;
     padding-left: 6px;
   }
-  header .top-navs #block-openy-lily-main-menu ul li.nav-level-2.menu-icon-1:hover {
+  header .top-navs #block-openy-lily-main-menu .nav li.nav-level-2.menu-icon-1:hover {
     background: rgba(255, 255, 255, 0.18);
   }
 }
-header .top-navs #block-openy-lily-main-menu ul li.nav-level-3 {
+header .top-navs #block-openy-lily-main-menu .nav li.nav-level-3 {
   float: none;
 }
-header .top-navs #block-openy-lily-main-menu ul.nav-level-1 {
+header .top-navs #block-openy-lily-main-menu .nav.nav-level-1 {
   text-align: center;
 }
-header .top-navs #block-openy-lily-main-menu ul.row-level-2 {
+header .top-navs #block-openy-lily-main-menu .nav.row-level-2 {
   background: rgba(255, 255, 255, 0.98);
   padding-top: 14px;
   padding-bottom: 14px;
@@ -461,11 +461,11 @@ header .top-navs #block-openy-lily-main-menu ul.row-level-2 {
   box-shadow: none;
   border-radius: 0;
 }
-header .top-navs #block-openy-lily-main-menu ul.row-level-2 li {
+header .top-navs #block-openy-lily-main-menu .nav.row-level-2 li {
   width: 100%;
   padding: 0;
 }
-header .top-navs #block-openy-lily-main-menu ul.row-level-2 li a {
+header .top-navs #block-openy-lily-main-menu .nav.row-level-2 li a {
   display: block;
   font-size: 18px;
   padding: 10px 28px;
@@ -473,7 +473,7 @@ header .top-navs #block-openy-lily-main-menu ul.row-level-2 li a {
   white-space: normal;
   color: #7d7b7b;
 }
-header .top-navs #block-openy-lily-main-menu ul.row-level-2 li a:hover {
+header .top-navs #block-openy-lily-main-menu .nav.row-level-2 li a:hover {
   background: none;
   color: #7d7b7b;
 }
@@ -556,13 +556,13 @@ header.expanded-search {
   padding-top: 40px;
   padding-bottom: 14px;
 }
-#page-footer #block-openy-lily-footersocialblock ul {
+#page-footer #block-openy-lily-footersocialblock .field-block-content ul {
   margin-bottom: 40px;
 }
-#page-footer #block-openy-lily-footersocialblock ul li {
+#page-footer #block-openy-lily-footersocialblock .field-block-content ul li {
   margin: 0 12px;
 }
-#page-footer #block-openy-lily-footersocialblock ul li a {
+#page-footer #block-openy-lily-footersocialblock .field-block-content ul li a {
   border: 3px solid #428bca;
   border-radius: 50%;
   width: 46px;
@@ -575,7 +575,7 @@ header.expanded-search {
   position: relative;
   overflow: hidden;
 }
-#page-footer #block-openy-lily-footersocialblock ul li a:before {
+#page-footer #block-openy-lily-footersocialblock .field-block-content ul li a:before {
   position: absolute;
   top: 0;
   left: 0;
