--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -11,6 +11,7 @@ body {
     max-width: 100%;
   }
 }
+
 #side-area {
   height: 100%;
   width: 0;
@@ -18,12 +19,12 @@ body {
   z-index: 9999;
   top: 52px;
   left: 0;
-  overflow:auto;
+  overflow: auto;
   transition: 0.2s;
   background-color: #0089d0;
-  bottom:0;
-  overflow-y:scroll;
-  overflow-x:hidden;
+  bottom: 0;
+  overflow-y: scroll;
+  overflow-x: hidden;
   .toolbar-vertical & {
     top: 92px;
   }
@@ -115,12 +116,12 @@ body {
 header {
   @include transition(all 0.2s linear);
   @include clearfix;
-  left:0;
+  left: 0;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 999;
-  font-family:'Cachet';
+  font-family: 'Cachet';
   .container-fluid {
     @media (min-width: 1200px) {
       padding-right: 100px;
@@ -218,8 +219,7 @@ header {
       @include breakpoint (0 $tablet-start) {
         display: none !important;
       }
-
-      ul {
+      .nav {
         float: none;
         li {
           a {
@@ -239,7 +239,7 @@ header {
             float: none;
             display: table-cell;
             width: 1%;
-            min-width: 10%;
+            min-width: 4%;
             > a {
               padding: 21px 0px;
               i {
